# gaze

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  lefthook.yml  作業メモ.md
.github/workflows/: ci.yml  release-cli.yml  website-ci.yml  website-deploy.yml
crates/gaze-cli/: Cargo.toml  build.rs
crates/gaze-cli/src/: lib.rs  main.rs
crates/snapforge-capture/: Cargo.toml  build.rs
crates/snapforge-capture/src/: error.rs  lib.rs  macos.rs  windows.rs
crates/snapforge-core/: Cargo.toml
crates/snapforge-core/src/: annotation.rs  capture.rs  lib.rs  output.rs  settings.rs  shortcut.rs
crates/snapforge-pipeline/: Cargo.toml
crates/snapforge-pipeline/src/: error.rs  lib.rs  optimizer.rs
docs/: 00_research_and_strategy.md  01_expanded_ideas.md  02_development_order_and_tech_selection.md  02_tauri_v2_research.md  03_frontend_coding_guidelines.md  03_rust_coding_guidelines.md  04_ux_design_specification.md  05_distribution_and_sales_strategy.md  05_next_session_tasks.md  06_react_typescript_removal_plan.md  07_settings_design.md  08_naming_decision.md  09_test_strategy.md  10_cli_implementation_design.md  11_homebrew_distribution_guide.md  12_cli_e2e_test_cases.csv  13_gui_smoke_checklist.md  14_cli_e2e_phase1.md  15_unit_test_quickwins.md  16_homebrew_cask_distribution_guide.md  lp_gap_analysis.csv
docs/learnings/: adr-001-preview-window-architecture.md  adr-002-preview-window-ipc.md  debug-preview-click.md  performance-tips.md  tauri-v2-gotchas.md
public/: onboarding.html  preview.html  recording-indicator.html  settings.html
scripts/: e2e_cli.sh  gen_fixtures.sh  install.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture_flow.rs  clipboard.rs  error.rs  lib.rs  logging.rs  main.rs  preview_window.rs  settings.rs  shortcut.rs  state.rs  tray.rs
src-tauri/src/commands/: capture.rs  mod.rs  onboarding.rs  pipeline.rs
src-tauri/src/recording/: encoder.rs  mod.rs
website/: .htmlhintrc  .prettierrc.json  PHILOSOPHY.md  _headers  changelog.html  index.html  package-lock.json  package.json  privacy.html  roadmap.html  terms.html
website/ja/: changelog.html  index.html  privacy.html  roadmap.html  terms.html
website/scripts/: i18n-check.mjs
