[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/snapforge-capture",
    "crates/snapforge-pipeline",
    "crates/snapforge-core",
    "crates/gaze-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# Optimize image-heavy crates even in dev builds to avoid 10x slowdown
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.snapforge-pipeline]
opt-level = 3
[profile.dev.package.gifski]
opt-level = 3
[profile.dev.package.imagequant]
opt-level = 3
[profile.dev.package.resize]
opt-level = 3
[profile.dev.package.gif]
opt-level = 3
[profile.dev.package.gif-dispose]
opt-level = 3
[profile.dev.package.lodepng]
opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }

# Image processing
image = "0.25"
arboard = "3"

# Tauri
tauri = "2"
tauri-build = "2"
