[package]
name = "snapforge-core"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
snapforge-pipeline = { path = "../snapforge-pipeline" }

[dev-dependencies]
tempfile = "3"
